Closed
Bug 794285
Opened 13 years ago
Closed 13 years ago
Bug 793634 broke comm-central builds
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
| Tracking | Status | |
|---|---|---|
| firefox17 | --- | fixed |
People
(Reporter: RyanVM, Assigned: karlt)
References
Details
(Keywords: regression, Whiteboard: [qa-])
Attachments
(1 file)
|
3.58 KB,
patch
|
glandium
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #793634 +++
https://tbpl.mozilla.org/php/getParsedLog.php?id=15530672&tree=Thunderbird-Trunk
checking for gtk+-2.0 >= 2.18.0 gtk+-unix-print-2.0 glib-2.0 gobject-2.0 gdk-x11-2.0... Requested 'gtk+-2.0 >= 2.18.0' but version of GTK+ is 2.10.4
configure: error: Library requirements (gtk+-2.0 >= 2.18.0 gtk+-unix-print-2.0 glib-2.0 gobject-2.0 gdk-x11-2.0) not met; consider adjusting the PKG_CONFIG_PATH environment variable if your libraries are in a nonstandard prefix so pkg-config can find them.
configure: error: /builds/slave/tb-c-cen-lnx/build/mozilla/configure failed for mozilla
*** Fix above errors and then restart with "make -f client.mk build"
make[2]: *** [configure] Error 1
make[2]: Leaving directory `/builds/slave/tb-c-cen-lnx/build'
make[1]: *** [objdir-tb/config.status] Error 2
make[1]: Leaving directory `/builds/slave/tb-c-cen-lnx/build'
make: *** [build] Error 2
| Assignee | ||
Comment 1•13 years ago
|
||
This makes no effort to provide runtime compatibility for GTK libraries prior
to 2.18, if building against newer headers.
I haven't tested this on comm-central builders.
If someone can push to try, that would be helpful.
Are there plans to move comm-central builders to CentOS 6?
(There is a risk of frequent similar problems.)
Attachment #664764 -
Flags: review?(mh+mozilla)
Comment 2•13 years ago
|
||
Huh. Thunderbird builders should be the same as Firefox ones. Maybe a config error in our duplicate config?
Comment 3•13 years ago
|
||
(In reply to Mark Banner (:standard8) from comment #2)
> Huh. Thunderbird builders should be the same as Firefox ones. Maybe a config
> error in our duplicate config?
The Firefox builders switched to mock. Thunderbird ones haven't switched, have they?
Comment 4•13 years ago
|
||
(In reply to Karl Tomlinson (:karlt) from comment #1)
> Created attachment 664764 [details] [diff] [review]
> restore support for building against GTK+ 2.10
>
> This makes no effort to provide runtime compatibility for GTK libraries prior
> to 2.18, if building against newer headers.
against old headers.
Comment 5•13 years ago
|
||
Comment on attachment 664764 [details] [diff] [review]
restore support for building against GTK+ 2.10
Review of attachment 664764 [details] [diff] [review]:
-----------------------------------------------------------------
Please move gtk_selection_* functions to gtkselection.h, gtk_widget_* to gtkwidget.h, gtk_plug_* to gtkplug.h and gtk_dialog_* to gtkdialog.h.
::: widget/gtk2/compat/gtk/gtk.h
@@ +79,5 @@
> +{
> + widget->allocation = *allocation;
> +}
> +
> +static inline void
Please remove the whitespace at the end of this line.
Attachment #664764 -
Flags: review?(mh+mozilla) → review+
Comment 6•13 years ago
|
||
So as it turns out, we don't currently have the same builders as Firefox :-( I've filed bug 794378 to correct that for Thunderbird.
Do we want a tracking bug to raise the gtk limit again?
Comment 7•13 years ago
|
||
I've pushed https://tbpl.mozilla.org/?tree=Thunderbird-Try&rev=62fc4890be3d Not sure if I did it correctly though.
Comment 8•13 years ago
|
||
Kent:
You did it correctly, builds are still coming in.
-Mike
Comment 9•13 years ago
|
||
The try server builds look OK.
| Assignee | ||
Comment 10•13 years ago
|
||
Assignee: nobody → karlt
Comment 11•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
Comment 12•13 years ago
|
||
Comment on attachment 664764 [details] [diff] [review]
restore support for building against GTK+ 2.10
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 772446
User impact if declined: ESR17 on ancient build platform
Testing completed (on m-c, etc.): already landed on m-c
Risk to taking this patch (and alternatives if risky): changes runtime requirements for linux users
String or UUID changes made by this patch: none
Attachment #664764 -
Flags: approval-mozilla-aurora?
Comment 13•13 years ago
|
||
Comment on attachment 664764 [details] [diff] [review]
restore support for building against GTK+ 2.10
yes to having ESR17 on the right GTK
Attachment #664764 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 14•13 years ago
|
||
Pushed to Aurora:
http://hg.mozilla.org/releases/mozilla-aurora/rev/3f1a7602793e
status-firefox17:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•