b=794285 restore support for building against GTK+ 2.10 r=glandium